fix error spacing

--- a/app/assets/stylesheets/_honeycrisp-compact.scss
+++ b/app/assets/stylesheets/_honeycrisp-compact.scss
@@ -166,6 +166,8 @@
       margin: 0;
       position: absolute;
       font-size: 1.2rem;
+      line-height: 1.2rem;
+      margin: 5px 0;
     }
     &--error {
       margin-left: 0;
